<resources>
    <string name="app_name">Primaros Días</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Facultad de Tecnologías Educativas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="direction_council">Consejo de Dirección</string>
    <string name="uci_info">Información de la UCI</string>
    <string name="faculty_info">Información de la Facultad</string>
    <string name="guide_teachers">Profesores guías</string>
    <string name="events">Principales eventos</string>
    <string name="feu_movements">Movimientos FEU</string>
    <string name="scientific_groups">Grupos Cientifico Estudiantil</string>
    <string name="map">Mapa de la UCI</string>
    <string name="useful_data">Datos Utiles</string>
    <string name="feu_secretariat">Secretariado de la FEU</string>
    <string name="cloister">Claustro de Profesores</string>

    <string name="fullscreen_photo">Fullscreen Photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- UCI Information -->
    <string name="campus_title">Campus</string>
    <string name="campus_description">Ciudad tecnológica de avanzada, con una infraestructura de más de 150 edificaciones distribuidas en 268 hectáreas, dotada de amplias y modernas instalaciones al servicio a la comunidad universitaria.</string>
    <string name="cultural_title">Patrimonio Cultural</string>
    <string name="cultural_description">Atesoramos 33 obras originales donadas por destacadas figuras de las artes plásticas nacionales, en un entorno concebido como una gran galería de arte al aire libre de elevado valor patrimonial.</string>
    <string name="sport_title">Deporte</string>
    <string name="sport_description">Instalaciones para diversas disciplinas nos permiten asumir la realización de eventos deportivos. El juego ciencia recibe una atención especial a través de la Cátedra Honorífica de Ajedrez “Remberto Fernández”.</string>
    <string name="communication_title">Comunicación</string>
    <string name="communication_description">Gestionamos los procesos de comunicación internos y externos para fortalecer nuestra identidad sobre la base de valores compartidos, y garantizar la construcción de una imagen institucional adecuada.</string>
    <string name="events_title">Eventos</string>
    <string name="events_description">Organizamos, participamos y promovemos importantes eventos científicos, académicos, sociales, políticos, culturales y deportivos, a nivel nacional e internacional.</string>
    <string name="graduates_title">Egresados</string>
    <string name="graduates_description">Durante 19 años hemos graduado 15 453 Ingenieros en Ciencias Informáticas con un alto nivel de especialización en el trabajo con las tecnologías de la información y las comunicaciones.</string>
    <string name="person_name">Nombre</string>
    <string name="person_charge">Cargo</string>


    <string name="schedule">Horario del Comedor</string>
    <string name="almuerzo">Almuerzo:\n Comienza: 11:00ap \t Termina: 1:50pm</string>
    <string name="desayuno">Desayuno:\n Comienza: 6:30am \t Termina: 8:30am</string>
    <string name="comida">Comida:\n Comienza: 6:00pm \t Termina: 7:50pm</string>
    <string name="phones">Telefonos</string>
    <string name="decana">Decana:78373722</string>
    <string name="vdf">Vicedecana de Formacion: 78373737</string>
    <string name="vda">Vicedecano de Administracion: 78353875</string>
    <string name="secretaria">Secretaría Docente: 78373705</string>
    <string name="ppaa">Local de los PPAA: 78373709</string>

    <!--    FEU Info-->
</resources>